<resources>
    <string name="app_name">ETS Mostar</string>
    <string name="app_name_full">JU Srednja elektrotehnička škola</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_welcome_screen">WelcomeScreen</string>
    <string name="title_activity_intro_screen">IntroScreen</string>
    <string name="loading">Učitavanje</string>
    <string name="tehnicar">4 Godine</string>
    <string name="zanat">3 Godine</string>


    // intro screens strings headings
    <string name="heading_intro_screen_1">WELCOME</string>
    <string name="heading_intro_screen_2">VIJESTI</string>
    <string name="heading_intro_screen_3">DOGAĐAJI</string>
    <string name="heading_intro_screen_4">GALERIJA</string>
    <string name="heading_intro_screen_5">SMJEROVI</string>

    // intro screens strings description
    <string name="description_intro_screen_1">Dobrodošli na oficijalnu android aplikaciju Elektrotehničke škole Mostar u nastavku pogledajte šta sve aplikacija nudi.\nOsjećajte se ugodno...</string>
    <string name="description_intro_screen_2">Možete pogledati najnovije vijesti vezane za radi i događanja u školi.</string>
    <string name="description_intro_screen_3">Možete vidjeti sve događaje koji se održavaju u školi kao i one koji će se održati.</string>
    <string name="description_intro_screen_4">Pogledajte galeriju slika iz naše škole.</string>
    <string name="description_intro_screen_5">Za sve one koji razmišljaju ili namjeravaju da nam se priključe tu je lista smjerova kao i šta pojedini smjerovi nude tokom studija.</string>

    //navigation drawer menu strings
    <string name="NEWS">Vijesti</string>
    <string name="EVENTS">Događaji</string>
    <string name="GALLERY">Galerija</string>
    <string name="NOTIFICATIONS">Obavijesti</string>
    <string name="STUDY">Smjerovi</string>
    <string name="BOOKS">Materijali</string>
    <string name="POLL">Anketa</string>
    <string name="ABOUT">O Nama</string>

    // podaci o aplikaciji
    <string name="others">O Aplikaciji</string>
    <string name="share">Podijeli</string>
    <string name="settings">Postavke</string>
    <string name="AboutApp">O Aplikaciji</string>

    <string name="drawer_open">Drawer Open</string>
    <string name="drawer_close">Drawer Close</string>
    <string name="title_activity_reading_view">ReadingView</string>
    <string name="ets_location">Alekse Šantića 10 Mostar</string>
    <string name="ets_phone_number">036 580–126</string>
    <string name="ets_fax_number">036 580–127</string>
    <string name="ets_email">eltehmo@bih.net.ba </string>

    //About App
    <string name="creator_of_app">Powered by TeraWatt</string>
    <string name="email_of_creator">terawattmo@gmail.com</string>
    <string name="private_email_of_creator">emir.veledar@edu.fit.ba</string>
    <string name="mobile_phone_of_creator">061/ 258 - 231</string>
    <string name="location_of_creator_office">Mostar</string>
</resources>
