<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/tools">
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#f5f5f5"
    android:orientation="vertical">

    <!--  For each sharing view, set attribute transitionName TO  -->

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:scaleType="centerCrop"
        android:src="@drawable/f0ecb2e27d6ae37ea388d216d089c207"
        android:fitsSystemWindows="true"
        />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="82dp"
        android:padding="@dimen/activity_vertical_margin">

        <View
            android:id="@+id/details_circle"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:background="@mipmap/ets_logo"
            android:transitionName="Name" />

        <TextView
            android:id="@+id/details_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="@dimen/activity_horizontal_margin"
            android:layout_toRightOf="@+id/details_circle"
            android:text="@string/app_name_full"
            android:textSize="20sp"
            android:transitionName="Name"
            android:textColor="@color/textBlackColor"/>

    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="@dimen/activity_horizontal_margin"
        >

        <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/details_phone_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Broj telefona:"
            android:textColor="#9f9f9f"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/details_phone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/activity_horizontal_margin"
            android:layout_toRightOf="@+id/details_phone_label"
            android:text="@string/ets_phone_number"
            android:textSize="20sp"
            android:transitionName="aaa"
            android:textColor="#000"/>

    </RelativeLayout>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/activity_vertical_margin">

            <TextView
                android:id="@+id/details_fax_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Fax:"
                android:textColor="#9f9f9f"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/details_fax"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/activity_horizontal_margin"
                android:layout_toRightOf="@+id/details_fax_label"
                android:text="@string/ets_fax_number"
                android:textColor="@color/textBlackColor"
                android:textSize="20sp"
                android:transitionName="aaa" />

        </RelativeLayout>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/activity_vertical_margin">

            <TextView
                android:id="@+id/details_email_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Email:"
                android:textColor="#9f9f9f"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/details_email"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/activity_horizontal_margin"
                android:layout_toRightOf="@+id/details_email_label"
                android:text="@string/ets_email"
                android:textColor="@color/textBlackColor"
                android:textSize="20sp" />

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/activity_vertical_margin">

            <TextView
                android:id="@+id/details_city_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Lokacija:"
                android:textColor="#9f9f9f"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/details_city"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/activity_horizontal_margin"
                android:layout_toRightOf="@+id/details_city_label"
                android:text="@string/ets_location"
                android:textColor="@color/textBlackColor"
                android:textSize="20sp" />

        </RelativeLayout>
    </LinearLayout>
</LinearLayout>
    </android.support.v4.widget.NestedScrollView>